// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`nuxt-api-party > fetches data with $testApi 1`] = `
{
  "blob": "Foo",
  "json": [
    {
      "completed": false,
      "id": 1,
      "title": "delectus aut autem",
      "userId": 1,
    },
    {
      "completed": false,
      "id": 2,
      "title": "quis ut nam facilis et officia qui",
      "userId": 1,
    },
    {
      "completed": false,
      "id": 3,
      "title": "fugiat veniam minus",
      "userId": 1,
    },
  ],
}
`;

exports[`nuxt-api-party > fetches data with useTestApiData 1`] = `
[
  {
    "completed": false,
    "id": 1,
    "isTransformed": true,
    "title": "delectus aut autem",
    "userId": 1,
  },
  {
    "completed": false,
    "id": 2,
    "isTransformed": true,
    "title": "quis ut nam facilis et officia qui",
    "userId": 1,
  },
  {
    "completed": false,
    "id": 3,
    "isTransformed": true,
    "title": "fugiat veniam minus",
    "userId": 1,
  },
]
`;

exports[`nuxt-api-party > throws error for invalid response with $testApi 1`] = `
{
  "data": {
    "reason": "anything",
  },
  "error": true,
  "message": "Not Found",
  "statusCode": 404,
  "statusMessage": "Not Found",
  "url": "http://localhost/api/foo/bar",
}
`;
